<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <TextView
            android:id="@+id/txvUsuario"
            android:text="@string/titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>

        <EditText
            android:id="@+id/editarUsuario"
            android:hint="@string/nom_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSalir"
            android:text="@string/exit"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content">

        </Button>

        <Button
            android:id="@+id/btnEnviar"
            android:text="@string/send"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content">
        </Button>


    </LinearLayout>





</LinearLayout>